# streaming-udp-video

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/: frame_processor.cpp  frame_processor.h  main.cpp  receiver.cpp  sender.cpp
src/client/: main.cpp
src/protocols/: basic_protocol.cpp  basic_protocol.h  protocol.h
src/receiver/: main.cpp  receiver_socket.cpp  receiver_socket.h  video_decoder.cpp  video_decoder.h
src/sender/: main.cpp  sender_socket.cpp  sender_socket.h  video_reader.cpp  video_reader.h
src/server/: main.cpp
src/udp/: process_port_param.h
src/util/: process_port_param.h  util.cpp  util.h
src/video/: video_capture.cpp  video_capture.h  video_frame.cpp  video_frame.h
